# cxgledit

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: config.cxe  cxconfig  cxconfig.cxe  fonts.cxe  keybindings.cpp
assets/shaders/: cursor.fs  cursor.vs  textshader.fs  textshader.vs  viewshader.fs
cmake/: CustomFunctions.cmake
src/: app.cpp  app.hpp  glad.c  main.cpp
src/cfg/: configuration.cpp  configuration.hpp
src/cfg/types/: cursor_options.hpp
src/core/: core.hpp  data_manager.cpp  data_manager.hpp  matrix.cpp  matrix.hpp  strops.cpp  strops.hpp  text_data.cpp  text_data.hpp  vec_3.cpp  vec_3.hpp  vector.hpp
src/core/buffer/: bookmark.cpp  bookmark.hpp  data_manager.cpp  data_manager.hpp  file_context.cpp  file_context.hpp  std_string_buffer.cpp  std_string_buffer.hpp  text_data.cpp  text_data.hpp  text_rep.cpp  text_rep.hpp
src/core/commands/: command.cpp  command.hpp  command_interpreter.cpp  command_interpreter.hpp  command_type_info.hpp  file_manager.cpp  file_manager.hpp
src/core/math/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
src/ui/: editor_window.cpp  editor_window.hpp  layout.cpp  layout.hpp  modal.cpp  modal.hpp  panel.cpp  panel.hpp  status_bar.cpp  status_bar.hpp  syntax_highlighting.cpp  syntax_highlighting.hpp  view.cpp  view.hpp  view_cursor.cpp  view_cursor.hpp  view_enums.hpp
src/ui/core/: layout.cpp  layout.hpp  opengl.cpp  opengl.hpp
src/ui/cursors/: view_cursor.cpp  view_cursor.hpp
src/ui/managers/: font_library.cpp  font_library.hpp  shader_library.cpp  shader_library.hpp  view_manager.cpp  view_manager.hpp  widget_manager.cpp  widget_manager.hpp
src/ui/render/: font.cpp  font.hpp  renderable_object_parameter.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_container.cpp  vertex_container.hpp
src/ui/views/: editor_window.cpp  editor_window.hpp  modal.cpp  modal.hpp  popup_types.hpp  status_bar.cpp  status_bar.hpp  view.cpp  view.hpp  view_enums.hpp
src/ui/views/cursors/: view_cursor.cpp  view_cursor.hpp
src/ui/widgets/: editor_window.cpp  editor_window.hpp  panel.cpp  panel.hpp  status_bar.cpp  status_bar.hpp  text_view.cpp  text_view.hpp  widget.cpp  widget.hpp
src/ui/widgets/layout/: box.cpp  box.hpp  layout.cpp  layout.hpp  single_fill.cpp  single_fill.hpp
src/utils/: fileutil.cpp  fileutil.hpp  strops.hpp  utils.cpp  utils.hpp
test_src/: app.cpp  app_test.cpp  foo.cpp  main.c  main.cpp
tests/: widget_test.cpp
